--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,20 @@ services:
   - docker
 
 script:
-  - docker build --tag myimage .
+  - docker build -t myimage .
   - docker run myimage
 
 after_script:
   - docker images
+
+before_deploy:
+  - pip install --user awscli
+  - export PATH=$PATH:$HOME/.local/bin
+  - eval $(aws ecr get-login --no-include-email --region us-east-1)
+  - docker tag myimage:latest 692977587379.dkr.ecr.us-east-1.amazonaws.com/myimage:latest
+
+deploy:
+  provider: script
+  script: docker push 692977587379.dkr.ecr.us-east-1.amazonaws.com/myimage:latest
+  on:
+    branch: master
